fix: ensures content spacing fills only remaining space and doesn't push footer / header off screen

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,11 @@ body,
   margin: 0;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 a {
   text-decoration: none;
   color: var(--colour);
